<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#DCE0E1"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <TextView
        android:id="@+id/sconeName"
        android:layout_width="247dp"
        android:layout_height="26dp"
        android:layout_marginTop="0dp"
        android:hint="@string/scone_name"
        android:fontFamily="@font/leaves_and_ground"
        android:textSize="25sp"
        android:textStyle="bold"
        android:translationX="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sconeStore"
        android:layout_width="227dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:hint="@string/store"
        android:textSize="15sp"
        android:textStyle="bold"
        android:translationX="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sconeNotes"
        android:layout_width="227dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:hint="@string/notes"
        android:textSize="15sp"
        android:textStyle="bold"
        android:translationX="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/customImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/what_is_it"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/scoreBar"
        android:layout_width="244dp"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="240dp"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="3.5"
        android:rotation="-90"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:translationX="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/directionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_location_on_24"
        android:text="@string/Button"
        android:translationX="250dp"
        android:translationY="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/what_is_it2"
        android:src="@drawable/ic_baseline_share_24"
        android:text="@string/share"
        android:translationX="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.cardview.widget.CardView>