<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateRatingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.rating.UpdateRatingFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/updateVImage"
                android:layout_width="wrap_content"
                android:layout_height="252dp"
                android:contentDescription="@string/what_is_it"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.009"
                tools:srcCompat="@drawable/cheesescone" />

            <ImageButton
                android:id="@+id/cameraUButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="184dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/what_is_it"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintBottom_toBottomOf="@+id/updateVImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.943"
                app:layout_constraintStart_toStartOf="@+id/updateVImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26" />

            <TextView
                android:id="@+id/ReviewSconeTitle"
                android:layout_width="130dp"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/review_scone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateVImage"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/addNotesMultiLine"
                android:layout_width="345dp"
                android:layout_height="108dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/notes"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratePriceBar"
                app:layout_constraintVertical_bias="0.0" />

            <AutoCompleteTextView
                android:id="@+id/SconeName"
                android:layout_width="355dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:hint="@string/scone_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ReviewSconeTitle"
                app:layout_constraintVertical_bias="0.0" />

            <AutoCompleteTextView
                android:id="@+id/SconeStore"
                android:layout_width="355dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/store"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SconeName"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/flavourText"
                android:layout_width="57dp"
                android:layout_height="28dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/flavour"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rateTextureBar"
                app:layout_constraintVertical_bias="0.0" />

            <RatingBar
                android:id="@+id/rateFlavourBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flavourText"
                app:layout_constraintVertical_bias="0.025" />

            <TextView
                android:id="@+id/textureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/texture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SconeStore"
                app:layout_constraintVertical_bias="0.0" />

            <RatingBar
                android:id="@+id/rateTextureBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textureText"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rateFlavourBar"
                app:layout_constraintVertical_bias="0.0" />

            <RatingBar
                android:id="@+id/ratePriceBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Price"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/location_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.932" />

            <Button
                android:id="@+id/updateRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/updateRating"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.883"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addNotesMultiLine"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="244dp"
                android:text="@string/updateRating"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/ReviewSconeTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/updateVImage" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="center"
            app:menu="@menu/nav_bar_items">

        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>